[project]
name = "myllm"
version = "0.1.0"
description = ""
authors = [
    {name = "Tiago Rosa",email = "github@tiagorosa.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tiktoken (>=0.8.0,<0.9.0)",
    "torch (>=2.2.2,<2.3.0)",
    "numpy (>=1.24.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
